2007-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional):  Clip line segment.
	Fixes, or at least ameliorates, a problem with (unsigned int) terminal
	coordinates going negative for terminals using the code in bitmap.c
	Some day I hope we can replace all terminal coordinates with signed values
	Clipping/interpolation with unsigned coords doesn't work, and causes
	problems all over the place.
	Bug #1649887

2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (PKG_CHECK_MODULES):
	* m4/pkg.m4:
	Cleanup configure.in by defining PKG_CHECK_MODULES_NOFAIL in pkg.m4
	instead of copying the default help messages by ourself.

2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in:
	* src/Makefile.am:
	Use autotools' name transformation mechanism to define GNUPLOT_X11 as
	the installed name for the gnuplot_x11 program. Fix the use of
	--program-prefix and friends at configure time. Bug #997481.

2007-01-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (ENHGD_FLUSH):  libgd 2.0.34 will allow explicit request
	for Adobe Symbol font encoding.  Make use of this to handle transient
	use of Symbol font in enhanced text.  Does not affect older gd versions.

2007-01-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (get_position_default): Because the same parsing routines
	are used for both 2D and 3D positions, the trailing comma after a 2D
	position can be ambiguous.  For example:
	  plot "foo" with labels offset 1,1, "bar" with points
	currently produces an error when the parsing routine tries to interpret
	"bar" as a z component of the offset.  This patch fixes the common case
	shown above, although more pathological cases are still possible.
	E.g.  plot foo w labels offset 1,1,   4 with lines

2007-01-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store_label): Only store color value for each label